--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "symfony/yaml": "~3.0|~4.0",
     "symfony/console": "~3.0|~4.0",
     "doctrine/dbal": "~2.0",
+    "psr/log": "~1.0",
     "ext-json": "*",
     "ext-zlib": "*"
   },
