--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -103,7 +103,7 @@ services:
 
   ajax_pages:
     class: \Badoo\LiveProfilerUI\Pages\AjaxPages
-    arguments: ['@snapshot', '@method', '@job', '@aggregator', '@source', '%aggregator.use_jobs_in_aggregation%']
+    arguments: ['@snapshot', '@method', '@method_data', '@job', '@aggregator', '@source', '@fields', '%aggregator.use_jobs_in_aggregation%']
 
   # services for data providers
   snapshot:
