--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
+    "badoo/liveprof": "^1.3",
     "php": ">=7.0",
     "symfony/dependency-injection": "~3.0|~4.0",
     "symfony/config": "~3.0|~4.0",
@@ -21,9 +22,9 @@
     "ext-zlib": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.*",
-    "phpstan/phpstan": "^0.9.2",
-    "vimeo/psalm": "^1"
+    "phpunit/phpunit": "~9.5.4",
+    "phpstan/phpstan": "~0.12.88",
+    "vimeo/psalm": "~4.7.2"
   },
   "autoload": {
     "psr-4": {
